--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ img {
 
     h1 {
         font-family: "Edu TAS Beginner", cursive;
-        font-weight: 800;
+        font-weight: 600;
         font-size: 6rem;
     }
 }
@@ -103,7 +103,7 @@ img {
 /* Card */
 .card {
     width: 100%;
-    height: 360px;
+    min-height: 360px;
     padding: 15px;
     background-color: white;
     flex-direction: column;
