Update card image height for improved display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,9 +115,10 @@ img {
         margin-top: -25px;
     }
 
-    .card-image {
+    #card-image {
+
         img {
-            height: 250px;
+            height: 280px;
             object-fit: cover;
         }
     }
