--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     display: flex;
 }
 
+.d-none {
+    display: none;
+}
+
 .container {
     margin: 0 auto;
     max-width: 992px;
@@ -83,7 +87,6 @@ img {
     vertical-align: middle;
 }
 
-
 /* Header */
 .main-header {
     justify-content: center;
@@ -135,7 +138,25 @@ img {
     }
 }
 
+.card:hover {
+    cursor: pointer;
+}
 
+.modal {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+
+    .modal-image {
+        width: 50%;
+        height: 50%;
+        background-color: white;
+    }
+}
 
 /* Responsive Rules */
 @media screen and (max-width: 992px) {
