Add close icon functionality to modal and update HTML structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,18 @@ img {
         height: 50%;
         background-color: white;
     }
+
+    #closeIcon {
+        position: absolute;
+        top: 4rem;
+        right: 4rem;
+        font-size: 2rem;
+        color: white;
+    }
+
+    #closeIcon:hover {
+        cursor: pointer;
+    }
 }
 
 /* Responsive Rules */
