--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,27 +146,45 @@ img {
     width: 100%;
     height: 100vh;
     position: fixed;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
 
-    .modal-image {
-        width: 50%;
-        height: 50%;
-        background-color: white;
-    }
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 10px;
 
-    #closeIcon {
-        position: absolute;
-        top: 4rem;
-        right: 4rem;
-        font-size: 2rem;
-        color: white;
-    }
+        .modal-image {
+            background-color: white;
 
-    #closeIcon:hover {
-        cursor: pointer;
+            img {
+                width: auto;
+                height: 500px;
+
+                @media screen and (max-width: 992px) {
+                    height: 400px;
+                }
+
+                @media screen and (max-width: 576px) {
+                    height: 300px;
+                }
+            }
+        }
+
+        #closeIcon {
+            top: 1.5rem;
+            right: 2rem;
+            font-size: 3rem;
+            color: white;
+        }
+
+        #closeIcon:hover {
+            cursor: pointer;
+        }
     }
 }
 
