--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,10 +133,19 @@ img {
     }
 
     .card-description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         padding: 15px 0;
 
-        span {
+        .card-date {
             font-family: "Edu TAS Beginner", cursive;
+        }
+
+        .card-title {
+            font-family: "Edu TAS Beginner", cursive;
+            font-size: 1.2rem;
+            font-weight: 600;
         }
     }
 }
