--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ img {
     width: 100%;
     height: 100vh;
     position: fixed;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -215,6 +215,18 @@ img {
         #closeIcon:hover {
             cursor: pointer;
         }
+    }
+
+    .backward,
+    .forward {
+        color: white;
+        padding: 2rem;
+        font-size: 2rem;
+    }
+
+    .backward:hover,
+    .forward:hover {
+        cursor: pointer;
     }
 }
 
