--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,10 @@
 body {
     background-image: url('../img/cork.png');
     background-repeat: repeat;
+
+    main {
+        z-index: 100;
+    }
 }
 
 img {
@@ -157,6 +161,7 @@ img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+/* Modal */
 .modal {
     width: 100%;
     height: 100vh;
@@ -201,6 +206,7 @@ img {
 
                 span:nth-of-type(2) {
                     font-size: 1.5rem;
+                    font-weight: 600;
                 }
             }
         }
@@ -222,6 +228,10 @@ img {
         color: white;
         padding: 2rem;
         font-size: 2rem;
+
+        @media screen and (max-width: 576px) {
+            padding: 0.5rem;
+        }
     }
 
     .backward:hover,
